thêm cors backend sửa đăng nhập thêm user, frontend giao diện và logic đăng nhập

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -26,7 +26,11 @@
 
         "baseUrl": ".",
         "paths": {
-            "@/*": ["./src/*"]
+            "@/*": ["./src/*"],
+            "@internal/*": ["src/internal/*"],
+            "@patient/*": ["src/patient/*"],
+            "@shared/*": ["src/shared/*"],
+            "@routers/*": ["src/routers/*"]
         }
     },
     "include": ["src"]
