--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -7,7 +7,11 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "@/*": ["./src/*"]
+            "@/*": ["./src/*"],
+            "@internal/*": ["./src/internal/*"],
+            "@patient/*": ["./src/patient/*"],
+            "@shared/*": ["./src/shared/*"],
+            "@routers/*": ["./src/routers/*"]
         }
     }
 }
