--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@reduxjs/toolkit": "^2.10.1",
@@ -17,7 +20,6 @@
     "antd": "^5.28.1",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "i18next": "^25.6.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.553.0",
