--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "embla-carousel-react": "^8.6.0",
     "i18next": "^25.6.2",
     "i18next-browser-languagedetector": "^8.2.0",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.553.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
